feat(css): styled ul

--- a/deliverables/04-milestone/dev/css/typography.css
+++ b/deliverables/04-milestone/dev/css/typography.css
@@ -164,3 +164,12 @@ q:after {
     content: close-quote;
 }
 
+ul {
+	width: 100%;
+}
+
+ul li {
+	display: block;
+	list-style-type: none;
+	font-weight: 300;
+}
