--- a/deliverables/04-milestone/dev/css/typography.css
+++ b/deliverables/04-milestone/dev/css/typography.css
@@ -193,3 +193,33 @@ dd {
 	font-weight: 300;
 }
 
+.figure {
+	display: block;
+	margin: 0 auto;
+	width: 50%;
+}
+
+figure {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
+figcaption {
+	font-style: italic;
+	font-weight: 300;
+	font-size: 0.707em;
+	background-color: #f5f5f5;
+	display: block;
+	width: 100%;
+	margin: 0;
+	padding: 1rem 1rem;
+}
+
+figure img {
+	width: 100%;
+	padding: 0;
+	margin: 0;
+}
+
