feat(css): style header navigation

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,1 +1,15 @@
 // Mixins
+
+@mixin zero {
+	margin: 0;
+	padding: 0;
+}
+
+@mixin ease($transition-property, $transition-time, $method) {
+    -webkit-transition: $transition-property $transition-time $method;
+    -moz-transition: $transition-property $transition-time $method;
+    -ms-transition: $transition-property $transition-time $method;
+    -o-transition: $transition-property $transition-time $method;
+    transition: $transition-property $transition-time $method;
+}
+
