--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,7 @@
 
 
 // Component rules
+@import "components/reset";
+@import "components/grid";
+@import "components/typography";
+@import "components/main";
