fix(html, css, javascript): fix top navigation

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -8,9 +8,9 @@
 .header {
 	width:100%;
 	position:relative;
-	background: transparent url("../images/bg-placeholder.jpg") no-repeat center center;
+	background: url("../images/bg-placeholder.jpg") no-repeat center center;
 	background-size: cover;
-	padding: 5em 0em;
+	padding: 6em 0em;
 }
 
 .tag-line {
@@ -24,82 +24,165 @@
 	left: 1em;
 }
 
-// Toggle Nav
-
-.hb-toggle{
-	background: transparent;
-	height: 26px;
-	width: 30px;
-	padding: .65em 0em;
-	top: 1em;
-	right: 1em;
-	position:absolute;
+.header h3 {
+	text-align: center;
+	margin: 0 auto;
+	color: $dark-green;
 }
 
-.hb-toggle span,
-.hb-toggle span:before,
-.hb-toggle span:after {
+@media only screen and (max-width: 600px) {
 
-  position: absolute;
-  border-radius: 1px;
-  height: 5px;
-  width: 30px;
-  background-color: $light-green;
-  display: block;
-  content: '';
-  transition: all 250ms ease-in-out;
+	.header h3 {
+		display:block;
+		visibility: hidden;
+	}
 
-}
+	// Toggle Nav
 
-.hb-toggle span:before {
-	top:-10px;
-}
+	.hb-toggle{
+		background: transparent;
+		height: 26px;
+		width: 30px;
+		padding: .65em 0em;
+		top: 1em;
+		right: 1em;
+		position:absolute;
+		z-index:1000;
+	}
 
-.hb-toggle span:after {
-	bottom:-10px;
-}
+	.hb-toggle span,
+	.hb-toggle span:before,
+	.hb-toggle span:after {
 
-.hb-toggle.expand span {
-	background-color: transparent;
-}
+	  position: absolute;
+	  border-radius: 1px;
+	  height: 5px;
+	  width: 30px;
+	  background-color: $light-green;
+	  display: block;
+	  content: '';
+	  transition: all 250ms ease-in-out;
 
-.hb-toggle.expand span:before,
-.hb-toggle.expand span:after {
-	top: 0;
-}
+	}
 
-.hb-toggle.expand span:before {
-	-ms-transform: rotate(45deg);
-	-webkit-transform: rotate(45deg);
-	transform: rotate(45deg);
-}
+	.hb-toggle span:before {
+		top:-10px;
+	}
 
-.hb-toggle.expand span:after {
-	-ms-transform: rotate(-45deg);
-	-webkit-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-}
+	.hb-toggle span:after {
+		bottom:-10px;
+	}
+
+	.hb-toggle.expand span {
+		background-color: transparent;
+	}
+
+	.hb-toggle.expand span:before,
+	.hb-toggle.expand span:after {
+		top: 0;
+	}
+
+	.hb-toggle.expand span:before {
+		-ms-transform: rotate(45deg);
+		-webkit-transform: rotate(45deg);
+		transform: rotate(45deg);
+	}
+
+	.hb-toggle.expand span:after {
+		-ms-transform: rotate(-45deg);
+		-webkit-transform: rotate(-45deg);
+		transform: rotate(-45deg);
+	}
 
 // Navigation Overlay
 
+	.no-scroll {
+		overflow:hidden;
+	}
+
+	.top-nav ul {
+		position: fixed;
+		opacity: 0;
+		background-color: $dark-grey;
+		height: 100vh;
+		width:100%;
+		top:0em;
+		z-index:999;
+			li {
+				width: 100%;
+				text-align: center;
+			}
+			li:first-child {
+				margin-top: 6em;
+			}
+			a {
+				color: $light-grey;
+				text-align:center;
+				border-bottom: none;
+				letter-spacing: 1px;
+			}
+	}
+
+	.top-nav[data-state="expand"] ul {
+		opacity: .9;
+	}
+
+}
+
+// Big Screen Navigation Styling
+
 .top-nav ul {
 	@include zero;
+	@include ease(all, 250ms, linear);
+	font-size: 0;
 	position: absolute;
-	opacity: 0;
-	top:6em;
+	bottom: 0;
+	text-align: center;
+	display:block;
 			li {
-			width: 100%;
-			text-align: center;
-			margin: 1em 0;
-		}
-		a {
-			color: $light-grey;
-			text-align:center;
-			border-bottom: none;
+			font-size: 1.25rem;
 			letter-spacing: 1px;
+			border-right: 2px solid $black;
+			&:last-child {
+				border-right:none;
+			}
+			a {
+				@include ease(all, 250ms, linear);
+				border-bottom:none;
+				color: $light-grey;
+				padding: 1em 0;
+				width:100%;
+				display:block;
+				background-color:$dark-grey;
+				opacity: .9;
+			&:hover {
+				background-color: $black;
+				opacity:1;
+				}
+			}
 		}
 }
 
-.top-nav ul[data-state="expand"] {
-	opacity: 1;
+.bottom-nav ul {
+	@include zero;
+	font-size: 0;
+	display:block;
+	background-color: $dark-grey;
+		li {
+			font-size:1rem;
+			padding: 0 2em;
+			ul li{
+					padding : .25rem;
+					a{
+						padding:0;
+					}
+				}
+		}
+		a {
+			border-bottom:none;
+			padding: 1em 0;
+			display:block;
+			width: 100%;
+			color: $light-grey;
+		}
 }
