--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,78 @@
 </head>
 
 <body class="noscript site-wrapper">
+	<div class="site-contaier">
+
+		<header class="header grid">
+
+			<img class="logo" src="" alt="Logo">
+			<a class="hb-toggle" href="#">
+				<span></span>
+			</a>
+
+			<h3 class="tag-line">We help the environment and stuff&hellip;</h3>
+
+			<nav class="unit unit-xs-1 top-nav" data-state="collapse" role="navigation">
+				<ul class=" unit unit-s-1 unit-m-1 unit-l-1">
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="about.html">About Us</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="what-we-do.html">What We Do</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="media.html">Partners &amp; Media</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="advocacy.html">Our Advocacy</a></li>
+					<li class="unit unit-m-1-5 unit-l-1-5"><a href="donate.html">Donations</a></li>
+				</ul>
+			</nav>
+			
+		</header>
 
 	{{content}}
+	
+			<footer class=" grid footer">
+			<nav class="unit unit-s-1 unit-m-1 unit-l-1 bottom-nav">
+				<ul class="unit unit-s-1 unit-m-1 unit-l-1">
+
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">About Us</a>
+						<ul>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+						</ul>
+					</li>
+
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">What We Do</a>
+						<ul>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+						</ul>
+					</li>
+
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">Partners and Media</a>
+						<ul>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+						</ul>
+					</li>
+
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">Our Advocacy</a>
+						<ul>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+							<li><a href="#">Test</a></li>
+						</ul>
+					</li>
+
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">Donations</a>
+						<ul>
+							<li><a href="#">Test</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
+
+		</footer>
+	</div> <!-- Site Wrapper -->
+
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="js/main.js" type="text/javascript"></script>
 
