--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
 	<title>The American Forest Foundation · {{page.title}}</title>
-	<link href="{{site.baseurl}}css/style.css" rel="stylesheet">
+	<link href="{{site.baseurl}}/css/style.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 	<meta name="handheldfriendly" content="true">
@@ -35,11 +35,11 @@
 					<li class="unit unit-m-1-5 unit-l-1-5"><a href="donate.html">Donations</a></li>
 				</ul>
 			</nav>
-			
+
 		</header>
 
 	{{content}}
-	
+
 			<footer class=" grid footer">
 			<nav class="unit unit-s-1 unit-m-1 unit-l-1 bottom-nav">
 				<ul class="unit unit-s-1 unit-m-1 unit-l-1">
@@ -88,7 +88,7 @@
 	</div> <!-- Site Wrapper -->
 
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+	<script src="{{site.baseurl}}/js/main.js" type="text/javascript"></script>
 
 </body>
 </html>
