feat(html): linked footer nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 			<nav class="unit unit-s-1 unit-m-1 unit-l-1 bottom-nav">
 				<ul class="unit unit-s-1 unit-m-1 unit-l-1">
 
-					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">About Us</a>
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="about.html">About Us</a>
 						<ul>
 							<li><a href="#">Test</a></li>
 							<li><a href="#">Test</a></li>
@@ -52,7 +52,7 @@
 						</ul>
 					</li>
 
-					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">What We Do</a>
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="what-we-do.html">What We Do</a>
 						<ul>
 							<li><a href="#">Test</a></li>
 							<li><a href="#">Test</a></li>
@@ -60,7 +60,7 @@
 						</ul>
 					</li>
 
-					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">Partners and Media</a>
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="media.html">Partners and Media</a>
 						<ul>
 							<li><a href="#">Test</a></li>
 							<li><a href="#">Test</a></li>
@@ -68,7 +68,7 @@
 						</ul>
 					</li>
 
-					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">Our Advocacy</a>
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="advocacy.html">Our Advocacy</a>
 						<ul>
 							<li><a href="#">Test</a></li>
 							<li><a href="#">Test</a></li>
@@ -76,7 +76,7 @@
 						</ul>
 					</li>
 
-					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="a">Donations</a>
+					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="donate.html">Donations</a>
 						<ul>
 							<li><a href="#">Test</a></li>
 						</ul>
