--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -30,6 +30,36 @@
 	color: $dark-green;
 }
 
+.videoWrapper {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  /* @editable properties */
+  padding-top: 30px;
+  padding-bottom: 56.25%; /* 16/9 ratio */
+  /*background: #000;*/
+	& iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* @editable properties */
+    box-shadow: 0 0 8px rgba(0, 0, 0, .6);
+	}
+	& video {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-size: contain;
+		margin: 0 auto;
+		background-repeat: no-repeat;
+		background-position: 50% 50%;
+	}
+}
+
 @media only screen and (max-width: 600px) {
 
 	.header h3 {
