feat(donate): establish responsive grid

--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -42,6 +42,19 @@
   visibility: visible;
 }
 
+.unit-left {
+	float: left;
+}
+
+.unit-right {
+	float: right;
+}
+
+.center-object {
+	display: block;
+	margin: 0 auto;
+}
+
 .grid-bottom .unit {
   vertical-align: bottom;
 }
