refactor(css): changed banner text
Changed banner text to white with text-shadow.

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -27,7 +27,8 @@
 .header h3 {
 	text-align: center;
 	margin: 0 auto;
-	color: $dark-green;
+	color: $light-grey;
+	text-shadow: 2px 2px 2px $black;
 }
 
 .videoWrapper {
