feat(type): establish weights
Font weight classes of 100, 300, 400, and 700 added.

--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -11,6 +11,22 @@ html {
 
 /* — — — — — TYPE SIZING — — — — — */ /* ! — ! BI-CLASS IS TEMPORARY, decide whether to use universe class, or byte-size class ! — ! */
 
+.700 {
+	font-weight: 700;
+}
+
+.400 {
+	font-weight: 400;
+}
+
+.300 {
+	font-weight: 300;
+}
+
+.100 {
+	font-weight: 100;
+}
+
 .multiverse, .yotta {
 	font-size: 4.767rem;
 	margin: 1.414em 0 0.5em;
