refactor(donate): type hierarchy change
H1 given weight class of w700

--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -4,26 +4,25 @@
 
 html {
 	font-family: 'Roboto', sans-serif; /* ! — ! VARIABLE ! — ! */
-	font-weight: 400;
 	font-size: 100%;
 	line-height: 1.5rem;
 }
 
 /* — — — — — TYPE SIZING — — — — — */ /* ! — ! BI-CLASS IS TEMPORARY, decide whether to use universe class, or byte-size class ! — ! */
 
-.700 {
+.w700 {
 	font-weight: 700;
 }
 
-.400 {
+.w400 {
 	font-weight: 400;
 }
 
-.300 {
+.w300 {
 	font-weight: 300;
 }
 
-.100 {
+.w100 {
 	font-weight: 100;
 }
 
