--- a/scss/components/_reset.scss
+++ b/scss/components/_reset.scss
@@ -9,9 +9,7 @@ http://paulirish.com/2012/box-sizing-border-box-ftw
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-
-
-html, body, div, span, applet, object, iframe,
+html, body, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -28,7 +26,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+/*	font: inherit; */
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
