feat(css): Added logo-wrapper
Styled logo with link to index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,9 @@
 
 		<header class="header grid">
 
-			<img class="logo" src="" alt="Logo">
+			<div class="logo-wrapper">
+				<a href="index.html" class="logo" alt="American Forest Foundation Logo">
+			</div>
 			<a class="hb-toggle" href="#">
 				<span></span>
 			</a>
