--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -256,4 +256,31 @@
 	}
 }
 
+/* — — — — DONATIONS — — — — */
 
+.donations {
+	clear: both;
+	display: block;
+	overflow: hidden;
+}
+
+.donate-button {
+   -moz-box-sizing:    border-box;
+   -webkit-box-sizing: border-box;
+   box-sizing:         border-box;
+   margin: 0;
+   padding: 1.5rem;  
+   display: inline-block;
+   float: left;
+   position: relative;
+   height: 10rem;
+   h3 {
+	   margin: 0;
+	   font-size: 4rem;
+	   font-weight: 400;
+	   color: $dark-grey;
+	   position: absolute;
+	   top: 27.5%;
+	   left: 40%;
+   }
+}
