--- a/css/style.css
+++ b/css/style.css
@@ -1324,17 +1324,44 @@ tr:nth-child(even) {
 .donate-button {
   box-sizing: border-box;
   margin: 0;
-  padding: 1.5rem;
   display: inline-block;
   float: left;
   position: relative;
-  height: 10rem; }
-  /* line 277, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  height: 13rem;
+  overflow: hidden;
+  transition: all 250ms linear; }
+  /* line 278, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .donate-button h3 {
+    width: 100%;
+    text-align: center;
     margin: 0;
     font-size: 4rem;
-    font-weight: 400;
-    color: #2b2b2b;
+    font-weight: 100;
     position: absolute;
     top: 27.5%;
-    left: 40%; }
+    transition: all 150ms ease-in; }
+  /* line 288, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  .donate-button p {
+    -webkit-transform: translateY(210px);
+        -ms-transform: translateY(210px);
+            transform: translateY(210px);
+    text-align: center;
+    vertical-align: middle;
+    transition: all 200ms ease-out; }
+  /* line 294, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  .donate-button:hover {
+    background: #6B8E23; }
+    /* line 295, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    .donate-button:hover h3 {
+      color: #f5f5f5;
+      -webkit-transform: translateY(-5px);
+          -ms-transform: translateY(-5px);
+              transform: translateY(-5px);
+      font-size: 2.5rem;
+      font-weight: 700; }
+    /* line 301, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    .donate-button:hover p {
+      color: #f5f5f5;
+      -webkit-transform: translateY(105px);
+          -ms-transform: translateY(105px);
+              transform: translateY(105px); }
