--- a/css/style.css
+++ b/css/style.css
@@ -1329,8 +1329,9 @@ tr:nth-child(even) {
   position: relative;
   height: 13rem;
   overflow: hidden;
+  background-color: #f7f7f7;
   transition: all 250ms linear; }
-  /* line 278, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  /* line 279, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .donate-button h3 {
     width: 100%;
     text-align: center;
@@ -1340,7 +1341,7 @@ tr:nth-child(even) {
     position: absolute;
     top: 27.5%;
     transition: all 150ms ease-in; }
-  /* line 288, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  /* line 289, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .donate-button p {
     -webkit-transform: translateY(210px);
         -ms-transform: translateY(210px);
@@ -1348,30 +1349,53 @@ tr:nth-child(even) {
     text-align: center;
     vertical-align: middle;
     transition: all 200ms ease-out; }
-  /* line 294, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  /* line 295, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .donate-button input {
-    backgrond-color: rgba(0, 0, 0, 0);
     height: 13rem;
     border: none;
     padding: 1.5rem;
     font-size: 4rem;
     font-weight: 300; }
   /* line 302, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
-  .donate-button ::-webkit-input-placeholder {
+  .donate-button input[type="text"] {
+    display: block;
+    margin: 0;
+    width: 100%;
     color: #2b2b2b;
+    font-family: 'Roboto', sans-serif;
     font-size: 4rem;
-    font-weight: 300;
+    font-weight: 100;
+    text-align: right; }
+    /* line 311, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    .donate-button input[type="text"]:focus {
+      outline: 1px solid #6B8E23;
+      color: #6B8E23; }
+  /* line 316, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  .donate-button ::-webkit-input-placeholder {
+    backgrond-color: #f7f7f7;
+    color: #2b2b2b;
+    font-family: 'Roboto', sans-serif;
+    font-size: 4rem;
+    font-weight: 100;
     text-align: center; }
-  /* line 308, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  /* line 324, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .donate-button ::-moz-input-placeholder {
-    color: red; }
-  /* line 311, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    color: #2b2b2b;
+    font-family: 'Roboto', sans-serif;
+    font-size: 4rem;
+    font-weight: 100;
+    text-align: center; }
+  /* line 331, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .donate-button ::-ms-input-placeholder {
-    color: red; }
-  /* line 314, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    color: #2b2b2b;
+    font-family: 'Roboto', sans-serif;
+    font-size: 4rem;
+    font-weight: 100;
+    text-align: center; }
+  /* line 338, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .donate-button:hover {
     background: #6B8E23; }
-    /* line 315, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    /* line 339, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
     .donate-button:hover h3 {
       color: #f5f5f5;
       -webkit-transform: translateY(-5px);
@@ -1379,7 +1403,7 @@ tr:nth-child(even) {
               transform: translateY(-5px);
       font-size: 2.5rem;
       font-weight: 700; }
-    /* line 321, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    /* line 345, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
     .donate-button:hover p {
       color: #f5f5f5;
       -webkit-transform: translateY(105px);
