--- a/css/style.css
+++ b/css/style.css
@@ -1357,32 +1357,32 @@ tr:nth-child(even) {
             transform: translateY(210px);
     text-align: center;
     vertical-align: middle;
-    transition: all 200ms ease-out; }
-  /* line 304, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    transition: all 200ms ease-out;
+    opacity: 0; }
+  /* line 305, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .donate-button input {
     height: 13rem;
     border: none;
     padding: 1.5rem;
     font-size: 4rem;
     font-weight: 300; }
-  /* line 311, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  /* line 312, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .donate-button input[type="text"] {
     display: block;
     margin: 0;
     width: 100%;
+    background-color: #f7f7f7;
     color: #2b2b2b;
     font-family: 'Roboto', sans-serif;
     font-size: 4rem;
     font-weight: 100;
     text-align: right; }
-    /* line 320, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    /* line 322, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
     .donate-button input[type="text"]:focus {
-      outline: 1px solid #6B8E23;
-      color: #6B8E23; }
-  /* line 325, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+      outline: 1px solid #6B8E23; }
+  /* line 326, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .donate-button ::-webkit-input-placeholder {
-    backgrond-color: #f7f7f7;
-    color: #2b2b2b;
+    color: #A1A1A1;
     font-family: 'Roboto', sans-serif;
     font-size: 4rem;
     font-weight: 100;
@@ -1417,4 +1417,5 @@ tr:nth-child(even) {
       color: #f5f5f5;
       -webkit-transform: translateY(105px);
           -ms-transform: translateY(105px);
-              transform: translateY(105px); }
+              transform: translateY(105px);
+      opacity: 1; }
