fix(bottom nav): nav wraps properly
A simple wrap fixed the nav from bunching up into spaces IT HAS NO
BUSINESS BEING IN.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 
 	{{content}}
 
-			<footer class=" grid footer">
+			<footer class=" grid footer unit unit-s-1 unit-m-1 unit-l-1">
 			<nav class="unit unit-s-1 unit-m-1 unit-l-1 bottom-nav">
 				<ul class="unit unit-s-1 unit-m-1 unit-l-1">
 
